Fixed the overflows

--- a/style.css
+++ b/style.css
@@ -12,6 +12,10 @@ font-family: 'Overpass', sans-serif;
 font-family: 'Ubuntu', sans-serif
 */
 
+html,body{
+    overflow-x: hidden;
+}
+
 /* Global attributes */
 
 :root{
@@ -255,8 +259,7 @@ ul .dropdown a{
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin: 4rem 0;
-    min-height: 160vh;
+    margin: 6rem 0 3rem 0;
 }
 
 .design h1{
@@ -293,4 +296,28 @@ ul .dropdown a{
     font-family: 'Ubuntu', sans-serif;
     line-height: 2rem; 
 }
+
+/* State of the art */
+.sota{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    height: 160vh;
+}
+
+.phones img{
+    width: 100%;
+}
+
+.sota-text{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.sota-text h1,
+.sota-text p{
+    text-align: center;
+}
+
 
